# langchain-academy

./: EXPERIMENTAL_FINDINGS.md  README.md  pyproject.toml
module-0/: basics.py
module-1-local/: lesson2_simple_chain.py
module-1/local_model/: lesson2_2.py  lesson3.py  lesson3_chain.py  lesson4_routers.py  lesson5_agent_no_memory.py  lesson6_agent_with_memory.py  test_questions.py  tool_functions.py
module-2-local/: lesson_1_state_schema.py  lesson_2_state_reducers.py  lesson_3_multiple_schema.py  lesson_4_trim_and_filter.py  lesson_5_summarizing.py  lesson_6_external_memory.py  lesson_6_load_and_resume.py  lesson_6_streamlit.py
module-3-local/: langgraph.json  part01_streaming.py  part02_bonus_local_client.py  part02_bonus_using_local_dev.py  part02_human_in_the_loop.py  part03_dynamic_breakpoint.py  part03_editing_input.py  part03_with_streamlit.py  part04_replay_timetravel.py  part_03_editing_input.py  simple_tools.py
module-3-local/state_db/: example.db-shm  example.db-wal
module-4-local/: part01_parallelization.py  part01_parallelization_search.py  utils.py
