[project]
name = "langchain-academy"
version = "0.1.0"
description = "LangGraph course from Langchain Academy"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "torch==2.10.0",
    "torchvision==0.25.0",
    "torchaudio==2.10.0",
    "pytorch-triton-rocm ; sys_platform == 'linux'",
    "langchain>=1.3.0",
    "langgraph>=1.2.0",
    "langchain-ollama>=1.1.0",
    "langchain-chroma>=1.1.0",
    "ipykernel>=7.3.0",
    "streamlit>=1.58.0",
    "langgraph-checkpoint-postgres>=3.1.0",
    "transformers>=4.52.0",
    "langgraph-checkpoint-sqlite>=3.1.0",
]


[tool.uv.sources]
torch = [{ index = "pytorch-rocm", marker = "sys_platform == 'linux'" }]
torchvision = [{ index = "pytorch-rocm", marker = "sys_platform == 'linux'" }]
torchaudio = [{ index = "pytorch-rocm", marker = "sys_platform == 'linux'" }]
pytorch-triton-rocm = [{ index = "pytorch-rocm", marker = "sys_platform == 'linux'" }]

[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/rocm7.1"
